--- a/client/style.css
+++ b/client/style.css
@@ -1375,6 +1375,14 @@ footer {
   display: none;
   animation: slidein 0.7s;
 }
+.register__error-message {
+  color: var(--jazzberry-jam);
+  text-align: center;
+  border-radius: 3px;
+  animation: slidein 0.7s;
+  text-transform: capitalize;
+  display: none;
+}
 @keyframes slidein {
   0% {
     transform: translateX(350px);
